--- a/Fundamentos/bloco-03/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
+++ b/Fundamentos/bloco-03/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Exercícios</h1>
-    <p>Ainda não fiz amizades, mas segue abaixo uma lista de pessoas que já fizeram dinâmicas comigo.</p>    
+    <p>Lista de amigos:</p>    
     <ul>
         <li><a href="#gabriel">Gabriel</a></li>
         <li><a href="#ronaldo">Ronaldo</a></li>
