--- a/Fundamentos/bloco-03/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/Fundamentos/bloco-03/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -8,15 +8,42 @@
         h1 {
             font-size: 65px;
             color: orange;
+            font-family: sans-serif;
+            text-align: center; 
         }
 
         ul {
-            background-color: gray;
+            line-height: 30px;
+            font-style: italic;
+            text-decoration: underline;
         }
 
         .style-1 {
             background-color: yellow;
         }
+
+        p {
+            font-weight: 600;
+            font-size: 3em;                       
+        }
+
+        body {
+            font-size: 16px;
+        }
+
+        #amarelo {
+            background-color: yellow;
+        }
+
+        #vermelho {
+            background-color: red;
+        }
+
+        #marrom {
+            background-color: brown;
+        }
+
+
 
 
     </style>
@@ -24,10 +51,10 @@
   <body>
     <h1>Exercícios 3.2</h1>
     <p class="style-1">Qual é a sua cor favorita?</p>
-    <ul class="style-1">
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+    <ul>
+      <li id="amarelo">Amarelo</li>
+      <li id="vermelho">Vermelho</li>
+      <li id="marrom">Marrom</li>
     </ul>
   </body>
 </html>
