--- a/Fundamentos/bloco-03/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/Fundamentos/bloco-03/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -3,50 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <style>
-
-        h1 {
-            font-size: 65px;
-            color: orange;
-            font-family: sans-serif;
-            text-align: center; 
-        }
-
-        ul {
-            line-height: 30px;
-            font-style: italic;
-            text-decoration: underline;
-        }
-
-        .style-1 {
-            background-color: yellow;
-        }
-
-        p {
-            font-weight: 600;
-            font-size: 3em;                       
-        }
-
-        body {
-            font-size: 16px;
-        }
-
-        #amarelo {
-            background-color: yellow;
-        }
-
-        #vermelho {
-            background-color: red;
-        }
-
-        #marrom {
-            background-color: brown;
-        }
-
-
-
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
